--- a/index.html
+++ b/index.html
@@ -18,9 +18,15 @@
   	    		<!-- Лого -->
   	    			<a lang="en" href="./index.html" class="logo"><span class="logo-part">Web</span>Studio</a>
   	    			<ul class="header-menu list">
-  	        			<li class="header-menu-item"><a href="" class="link header-link current-page">Студия</a></li>
-  	        			<li class="header-menu-item"><a href="./portfolio.html" class="link header-link">Портфолио</a></li>
-  	        			<li class="header-menu-item"><a href="" class="link header-link">Контакты</a></li>
+  	        			<li class="header-menu-item">
+							<a href="" class="link header-link current-page">Студия<div class="sub-line"></div></a>
+						</li>
+  	        			<li class="header-menu-item">
+							<a href="./portfolio.html" class="link header-link">Портфолио</a>
+						</li>
+  	        			<li class="header-menu-item">
+							<a href="" class="link header-link">Контакты</a>
+						</li>
   	      			</ul>
   	    		</nav>
   	    		<!-- Контакты -->
@@ -98,32 +104,41 @@
   	      			<ul class="list what-we-do-list">
   	        			<li class="what-we-do-item">
   	          				<a href="">
-  	            				<img
-  	              					src="./images/studio-page/code.jpg"
-  	              					alt="Процесс написания кода"
-  	              					width="370"
-  	              					height="294"
-  	            				/>
+								<div class="what-we-do-thumb">
+  	            					<img
+  	              						src="./images/studio-page/code.jpg"
+  	              						alt="Процесс написания кода"
+  	              						width="370"
+  	              						height="294"
+									/>
+									<p class="what-we-do-info">Десктопные приложения</p>
+								</div>
   	          				</a>
   	        			</li>
   	        			<li class="what-we-do-item">
   	          				<a href="">
-  	            				<img
-  	            		  			src="./images/studio-page/app.jpg"
-  	            		  			alt="Процесс создания приложений"
-  	            		  			width="370"
-  	            		  			height="294"
-  	            				/>
+								<div class="what-we-do-thumb">
+									<img
+										src="./images/studio-page/app.jpg"
+										alt="Процесс создания приложений"
+										width="370"
+										height="294"
+									/>
+									<p class="what-we-do-info">Мобильные приложения</p>
+								</div>
   	          				</a>
   	        			</li>
   	        			<li class="what-we-do-item">
   	          				<a href="">
-  	            				<img
-  	            		  			src="./images/studio-page/design.jpg"
-  	            		  			alt="Дизайнер с планшетом"
-  	            		  			width="370"
-  	            		  			height="294"
-  	            				/>
+								<div class="what-we-do-thumb">
+									<img
+										src="./images/studio-page/design.jpg"
+										alt="Дизайнер с планшетом"
+										width="370"
+										height="294"
+									/>
+									<p class="what-we-do-info">Дизайнерские решения</p>  
+								</div>
   	          				</a>
   	        			</li>
 					</ul>
