--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
                 <a lang="en" href="./index.html" class="logo"><span class="logo-part">Web</span>Studio</a>
                 <ul class="header-menu list">
                     <li class="header-menu-item"><a href="./index.html" class="link header-link">Студия</a></li>
-                    <li class="header-menu-item"><a href="" class="link header-link current-page">Портфолио</a></li>
+                    <li class="header-menu-item"><a href="" class="link header-link current-page"><div class="sub-line"></div>Портфолио</a></li>
                     <li class="header-menu-item"><a href="" class="link header-link">Контакты</a></li>
                 </ul>
             </nav>
@@ -64,63 +64,107 @@
                 <ul class="list potfolio-menu">
                     <li class="portfolio-item">
                         <a href="" class="link">
-                            <img class="portfolio-photo" src="./images/portfolio-page/img1.jpg" alt="Сайт">
+                            <div class="portfolio-thumb">
+                                <img class="portfolio-photo" src="./images/portfolio-page/img1.jpg" alt="Сайт">
+                                <p class="portfolio-info">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                                шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <h2 class="works-title">Технокряк</h2>
                             <p class="works-type" >Веб-сайт</p>
                         </a>
                     </li>
                     <li class="portfolio-item">
                         <a href="" class="link">
-                            <img class="portfolio-photo" src="./images/portfolio-page/img2.jpg" alt="Постер">
+                            <div class="portfolio-thumb">
+                                <img class="portfolio-photo" src="./images/portfolio-page/img2.jpg" alt="Постер">
+                                <p class="portfolio-info">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                    платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <h2 class="works-title">Постер New Orlean vs Golden Star</h2>
                             <p class="works-type">Дизайн</p>
                         </a>
                     </li>
                     <li class="portfolio-item">
                         <a href="" class="link">
-                            <img class="portfolio-photo" src="./images/portfolio-page/img3.jpg" alt="Логотип ресторана Seafood">
+                            <div class="portfolio-thumb">
+                                <img class="portfolio-photo" src="./images/portfolio-page/img3.jpg" alt="Логотип ресторана Seafood">
+                                <p class="portfolio-info">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                    платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <h2 class="works-title">Ресторан Seafood</h2>
                             <p class="works-type">Приложение</p>
                         </a>
                     </li>
                     <li class="portfolio-item">
                         <a href="" class="link">
-                            <img class="portfolio-photo" src="./images/portfolio-page/img4.jpg" alt="Наушники">
+                            <div class="portfolio-thumb">
+                                <img class="portfolio-photo" src="./images/portfolio-page/img4.jpg" alt="Наушники">
+                                <p class="portfolio-info">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                    платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <h2 class="works-title">Проект Prime</h2>
                             <p class="works-type">Маркетинг</p>
                         </a>
                     </li>
                     <li class="portfolio-item">
                         <a href="" class="link">
-                            <img class="portfolio-photo" src="./images/portfolio-page/img5.jpg" alt="Две коробки">
+                            <div class="portfolio-thumb">
+                                <img class="portfolio-photo" src="./images/portfolio-page/img5.jpg" alt="Две коробки">
+                                <p class="portfolio-info">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                    платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <h2 class="works-title">Проект Boxes</h2>
                             <p class="works-type">Приложение</p>
                         </a>
                     </li>
                     <li class="portfolio-item">
                         <a href="" class="link">
-                            <img class="portfolio-photo" src="./images/portfolio-page/img6.jpg" alt="Безрамочный монитор">
+                            <div class="portfolio-thumb">
+                                <img class="portfolio-photo" src="./images/portfolio-page/img6.jpg" alt="Безрамочный монитор">
+                                <p class="portfolio-info">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                    платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <h2 class="works-title">Inspiration has no Borders</h2>
                             <p class="works-type">Веб-сайт</p>
                         </a>
                     </li>
                     <li class="portfolio-item">
                         <a href="" class="link">
-                            <img class="portfolio-photo" src="./images/portfolio-page/img7.jpg" alt="Книга">
+                            <div class="portfolio-thumb">
+                                <img class="portfolio-photo" src="./images/portfolio-page/img7.jpg" alt="Книга">
+                                <p class="portfolio-info">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                    платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <h2 class="works-title">Издание Limited Edition</h2>
                             <p class="works-type">Дизайн</p>
                         </a>
                     </li>
                     <li class="portfolio-item">
                         <a href="" class="link">
-                            <img class="portfolio-photo" src="./images/portfolio-page/img8.jpg" alt="Бирка Проект Lab">
+                            <div class="portfolio-thumb">
+                                <img class="portfolio-photo" src="./images/portfolio-page/img8.jpg" alt="Бирка Проект Lab">
+                                <p class="portfolio-info">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                    платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <h2 class="works-title">Проект LAB</h2>
                             <p class="works-type">Маркетинг</p>
                         </a>
                     </li>
                     <li class="portfolio-item">
                         <a href="" class="link">
-                            <img class="portfolio-photo" src="./images/portfolio-page/img9.jpg" alt="Ноутбук">
+                            <div class="portfolio-thumb">
+                                <img class="portfolio-photo" src="./images/portfolio-page/img9.jpg" alt="Ноутбук">
+                                <p class="portfolio-info">Технокряк это современная площадка распространения коронавируса. Компании используют эту
+                                    платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <h2 class="works-title">Growing Business</h2>
                             <p class="works-type">Приложение</p>
                         </a>
