Добавляет тайминги на ховеры

--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
                 <a lang="en" href="./index.html" class="logo"><span class="logo-part">Web</span>Studio</a>
                 <ul class="header-menu list">
                     <li class="header-menu-item"><a href="./index.html" class="link header-link">Студия</a></li>
-                    <li class="header-menu-item"><a href="" class="link header-link current-page"><div class="sub-line"></div>Портфолио</a></li>
+                    <li class="header-menu-item"><a href="" class="link header-link current-page">Портфолио</a></li>
                     <li class="header-menu-item"><a href="" class="link header-link">Контакты</a></li>
                 </ul>
             </nav>
