--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   	    			<a lang="en" href="./index.html" class="logo"><span class="logo-part">Web</span>Studio</a>
   	    			<ul class="header-menu list">
   	        			<li class="header-menu-item">
-							<a href="" class="link header-link current-page">Студия<div class="sub-line"></div></a>
+							<a href="" class="link header-link current-page">Студия</a>
 						</li>
   	        			<li class="header-menu-item">
 							<a href="./portfolio.html" class="link header-link">Портфолио</a>
