Добавляет модальное окно

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   	      		<div class="container">
 					<div class="hero-content">
   	        			<h1 class="title hero-title">Эффективные решения для вашего бизнеса</h1>
-					  	<button type="button" class="btn hero-btn">Заказать услугу</button>
+					  	<button type="button" class="btn hero-btn" data-modal-open>Заказать услугу</button>
 					</div>
   	      		</div>
   	    	</section>
@@ -429,6 +429,16 @@
 					</ul>
 				</div>  
 			</div>
-  	  	</footer>
+		</footer>
+		<div class="backdrop is-hidden" data-modal>
+			<div class="modal">
+				<button class="modal-close-btn" data-modal-close>
+					<svg class="modal-close-btn-icon">
+						<use href="./images/sprite.svg#close-btn-icon"></use>
+					</svg>
+				</button>
+			</div>
+		</div>
+		<script src="./js/modal.js"></script>
   	</body>
 </html>
